force-app/main/default/objects/ProjectContractRelation__c/ProjectContractRelation__c.object-meta.xml
<CustomObject>
    <label>Project - Contract Relation</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Project - Contract Relation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project - Contract Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>