force-app/main/default/objects/ProjectContractRelation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract - Project Relations</relationshipLabel>
    <relationshipName>ContractProjects</relationshipName>
    <type>Lookup</type>
</CustomField>