force-app/main/default/objects/ProjectContractRelation__c/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <formula>Contract__r.ContractName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>